[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/CameraHandler.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/BaseHistoryScene.gd" type="Script" id=2]
[ext_resource path="res://TileSet/Corner.png" type="Texture" id=3]
[ext_resource path="res://TileSet/UpWall.png" type="Texture" id=4]
[ext_resource path="res://TileSet/BottomWall.png" type="Texture" id=5]
[ext_resource path="res://TileSet/RightWall.png" type="Texture" id=6]
[ext_resource path="res://TileSet/SceneFrame.png" type="Texture" id=7]
[ext_resource path="res://TileSet/LeftWall.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Block.tscn" type="PackedScene" id=9]
[ext_resource path="res://Images/Others/Arrow.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("ARROW_RIGHT:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0, 6.5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ARROW_UP:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0, 6.5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ARROW_DOWN:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0, 6.5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ARROW_LEFT:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 5, -0.25, 0, 0.25, 0, 6.5, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[node name="BaseHistoryScene" type="Node2D"]
script = ExtResource( 2 )

[node name="CameraHandler" parent="." instance=ExtResource( 1 )]

[node name="Ground" type="Sprite" parent="."]
z_index = -10
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="UP" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -368 )
z_index = -10
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Block" parent="UP" instance=ExtResource( 9 )]
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 42.7, 1 )

[node name="DOWN" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 368 )
z_index = -10
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Block" parent="DOWN" instance=ExtResource( 9 )]
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 42.7, 1 )

[node name="LEFT" type="Sprite" parent="."]
visible = false
position = Vector2( -667, 0 )
z_index = -10
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Block" parent="LEFT" instance=ExtResource( 9 )]
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 1, 24 )

[node name="RIGHT" type="Sprite" parent="."]
visible = false
position = Vector2( 667, 0 )
z_index = -10
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Block" parent="RIGHT" instance=ExtResource( 9 )]
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 1, 24 )

[node name="UP-LEFT" type="Sprite" parent="."]
visible = false
position = Vector2( -667, -368 )
rotation = 1.57079
z_index = -10
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="UP-RIGHT" type="Sprite" parent="."]
visible = false
position = Vector2( 667, -368 )
rotation = -3.14159
z_index = -10
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="DOWN-RIGHT" type="Sprite" parent="."]
visible = false
position = Vector2( 667, 368 )
rotation = -1.57079
z_index = -10
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="DOWN-LEFT" type="Sprite" parent="."]
visible = false
position = Vector2( -667, 368 )
z_index = -10
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="ARROW_RIGHT" type="Sprite" parent="."]
visible = false
position = Vector2( 488, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="ARROW_UP" type="Sprite" parent="."]
visible = false
position = Vector2( 3.63798e-12, -200 )
rotation = -1.57079
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="ARROW_DOWN" type="Sprite" parent="."]
visible = false
position = Vector2( -9.53674e-07, 200 )
rotation = 1.57079
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="ARROW_LEFT" type="Sprite" parent="."]
visible = false
position = Vector2( -488, 0 )
rotation = -3.14159
scale = Vector2( 5, 5 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
